add menu and form style

--- a/styles/style.css
+++ b/styles/style.css
@@ -803,6 +803,7 @@ footer .wrapper {
     margin: 0;
     background: rgba(0,0,0,.3);
     z-index: 300;
+    overflow-y: auto;
 }
 
 
@@ -816,6 +817,7 @@ footer .wrapper {
     background: #fff;
     border-radius: 10px;   
     animation: bounce .6s;
+   
 }
 
 .form-show {
